--- a/templates/master.html
+++ b/templates/master.html
@@ -48,7 +48,7 @@
 			</div>
 			
 			<div class="col-md-4 col-sm-6 logo">
-				<a class="navbar-brand" href="index.html">
+				<a class="navbar-brand" href="/">
 					<i class="fas fa-taxi"></i> Cammy Cab</a>
 			</div>
 			
@@ -91,7 +91,7 @@
 						<li class="nav-item">
 							<a class="nav-link" href="/booking">Booking</a>
 						</li>
-						<li class="nav-item dropdown">
+						<!--li class="nav-item dropdown">
 							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
 							    aria-expanded="false">
 								Dropdown
@@ -101,7 +101,7 @@
 								<a class="dropdown-item text-center" href="services.html">Services</a>
 
 							</div>
-						</li>
+						</li-->
 						<li class="nav-item">
 							<a class="nav-link" href="/contact">Contact</a>
 						</li>
