--- a/templates/master.html
+++ b/templates/master.html
@@ -91,22 +91,10 @@
 						<li class="nav-item">
 							<a class="nav-link" href="/booking">Booking</a>
 						</li>
-						<!--li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
-							    aria-expanded="false">
-								Dropdown
-							</a>
-							<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-								<a class="dropdown-item text-center" href="about.html">About</a>
-								<a class="dropdown-item text-center" href="services.html">Services</a>
-
-							</div>
-						</li-->
 						<li class="nav-item">
 							<a class="nav-link" href="/contact">Contact</a>
 						</li>
 					</ul>
-
 				</div>
 			</nav>
 		</header>
@@ -115,7 +103,6 @@
         {% block header %}
 
         {% endblock %}
-		
 	</div>
 	<!-- //banner -->
 
@@ -252,10 +239,9 @@
 		<!-- copyright -->
 		<div class="footer-cpy text-center pt-sm-5 mt-sm-5 mt-4 pt-3">
 			<div class="w3layouts-agile-copyrightbottom">
-				<p>© 2018 Taxi Cab. All Rights Reserved | Design by
-					<a href="http://w3layouts.com/">W3layouts</a>
+				<p>© 2022 Cammy Cab. All Rights Reserved | Design by
+					<a href="/">Cammy Group of Technology</a>
 				</p>
-
 			</div>
 		</div>
 		<!-- //copyright -->
