index.html modified

--- a/templates/index.html
+++ b/templates/index.html
@@ -115,123 +115,6 @@
 	</section>
 	<!-- //about -->
 
-	<!-- Why taxi cab -->
-	<section class="why">
-		<div class="container-fluid p-md-5 p-3">
-			<h3 class="heading text-capitalize text-center">Why taxi cab</h3>
-			<h5 class="heading mb-5 text-center">Taxi Cab</h5>
-			<div class="row why-grids">
-				<div class="col-lg-3 col-md-4 col-sm-6">
-					<div class="py-5 px-2 mb-4 grid1 text-center">
-						<h4 class="mx-auto"><span>1</span></h4>
-						<p class="mt-5">Top Rated Drivers</p>
-					</div>
-				</div>
-				<div class="col-lg-3 col-md-4 col-sm-6">
-					<div class="py-5 px-2 mb-4 grid2 text-center">
-						<h4 class="mx-auto"><span>2</span></h4>
-						<p class="mt-5">Safety Journey</p>
-					</div>
-				</div>
-				<div class="col-lg-3 col-md-4 col-sm-6">
-					<div class="py-5 px-2 mb-4 grid3 text-center">
-						<h4 class="mx-auto"><span>3</span></h4>
-						<p class="mt-5">Without Peak Pricing</p>
-					</div>
-				</div>
-				<div class="col-lg-3 col-md-4 col-sm-6">
-					<div class="py-5 px-2 mb-4 grid4 text-center">
-						<h4 class="mx-auto"><span>4</span></h4>
-						<p class="mt-5">Fast And Secure</p>
-					</div>
-				</div>
-				<div class="col-lg-3 col-md-4 col-sm-6">
-					<div class="py-5 px-2 mb-md-0 mb-4 grid5 text-center">
-						<h4 class="mx-auto"><span>5</span></h4>
-						<p class="mt-5">Lowest Rates</p>
-					</div>
-				</div>
-				<div class="col-lg-3 col-md-4 col-sm-6">
-					<div class="py-5 px-2 mb-md-0 mb-4 grid6 text-center">
-						<h4 class="mx-auto"><span>6</span></h4>
-						<p class="mt-5">Best Quality Cabs</p>
-					</div>
-				</div>
-				<div class="col-lg-3 col-md-4 col-sm-6">
-					<div class="py-5 px-2 mb-sm-0 mb-4 grid7 text-center">
-						<h4 class="mx-auto"><span>7</span></h4>
-						<p class="mt-5">Online Booking</p>
-					</div>
-				</div>
-				<div class="col-lg-3 col-md-4 col-sm-6">
-					<div class="py-5 px-2 grid8 text-center">
-						<h4 class="mx-auto"><span>8</span></h4>
-						<p class="mt-5">24/7 Cab Service</p>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- //Why taxi cab -->
-
-	<!-- team -->
-	<section class="wthree-row py-5">
-		<div class="container py-lg-5 py-3">
-			<h3 class="heading text-capitalize text-center">Our Drivers</h3>
-			<h5 class="heading mb-5 text-center">Taxi Cab</h5>
-			<div class="row text-center">
-				<div class="col-lg-3 col-sm-6 col-6 team-grids">
-					<div class="team-effect">
-						<img src="images/team1.jpg" alt="img" class="img-fluid">
-					</div>
-					<!-- team text -->
-					<div class="footerv2-w3ls mt-3">
-						<h4>John Smith</h4>
-						<p class="my-2">Taxi Driver</p>
-						<p><i class="fas fa-phone" aria-hidden="true"></i> 12(00) 123 1234</p>
-					</div>
-					<!-- //team text -->
-				</div>
-				<div class="col-lg-3 col-sm-6 col-6 team-grids">
-					<div class="team-effect">
-						<img src="images/team2.jpg" alt="img" class="img-fluid">
-					</div>
-					<!-- team text -->
-					<div class="footerv2-w3ls mt-3">
-						<h4>Laura Hill</h4>
-						<p class="my-2">Taxi Driver</p>
-						<p><i class="fas fa-phone" aria-hidden="true"></i> 12(00) 123 1235</p>
-					</div>
-					<!-- //team text -->
-				</div>
-				<div class="col-lg-3 col-sm-6 col-6 team-grids mt-lg-0 mt-5">
-					<div class="team-effect">
-						<img src="images/team3.jpg" alt="img" class="img-fluid">
-					</div>
-					<!-- team text -->
-					<div class="footerv2-w3ls mt-3">
-						<h4>Smith Kevin</h4>
-						<p class="my-2">Taxi Driver</p>
-						<p><i class="fas fa-phone" aria-hidden="true"></i> 12(00) 123 1236</p>
-					</div>
-					<!-- //team text -->
-				</div>
-				<div class="col-lg-3 col-sm-6 col-6 team-grids mt-lg-0 mt-5">
-					<div class="team-effect">
-						<img src="images/team4.jpg" alt="img" class="img-fluid">
-					</div>
-					<!-- team text -->
-					<div class="footerv2-w3ls mt-3">
-						<h4>Thomson Doe</h4>
-						<p class="my-2">Taxi Driver</p>
-						<p><i class="fas fa-phone" aria-hidden="true"></i> 12(00) 123 1237</p>
-					</div>
-					<!-- //team text -->
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- //team -->
 
 	<!-- Our prices -->
 	<section class="prices py-5">
@@ -286,7 +169,7 @@
 	<!--/testimonials-->
 	<section class="testimonials banner-bottom-agile-w3ls py-5">
 		<div class="container py-lg-5 py-3">
-			<h3 class="heading text-capitalize text-center">Testimonial</h3>
+			<h3 class="heading text-capitalize text-center">Reviews</h3>
 			<h5 class="heading mb-5 text-center">Taxi Cab</h5>
 			<div class="inner-sec-w3layouts-agileits">
 				<div class="owl-carousel owl-theme">
