Changes in frontend

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,9 +12,9 @@
 						<div class="bs-slider-overlay">
 							<div class="banner-info text-center">
 								<span class="fas fa-taxi"></span>
-								<h1>24/7 Taxi Service </h1>
+								<h1>24/7 Cab Service </h1>
 								<h2 class="mb-5"><i class="fas fa-phone"></i> 12(00) 123 1234</h2>
-								<a href="booking.html">Book Now </a>
+								<a href="/booking">Book Now </a>
 							</div>
 						</div>
 					</div>
@@ -26,7 +26,7 @@
 								<span class="fas fa-taxi"></span>
 								<h4>Online Cab Booking</h4>
 								<h5 class="mb-5">No Extra Charges</h5>
-								<a href="booking.html">Book Now </a>
+								<a href="/booking">Book Now </a>
 							</div>
 						</div>
 					</div>
@@ -38,7 +38,7 @@
 								<span class="fas fa-taxi"></span>
 								<h4>Reach Your Destination</h4>
 								<h5 class="mb-5">Within Exact Time </h5>
-								<a href="booking.html">Book Now </a>
+								<a href="/booking">Book Now </a>
 							</div>
 						</div>
 					</div>
@@ -50,7 +50,7 @@
 								<span class="fas fa-taxi"></span>
 								<h4>Travel Safe & Secure</h4>
 								<h5 class="mb-5">Assured Cab Service</h5>
-								<a href="booking.html">Book Now </a>
+								<a href="/booking">Book Now </a>
 							</div>
 						</div>
 					</div>
@@ -69,7 +69,7 @@
 	<section class="about py-5">
 		<div class="container py-lg-5 py-3">
 			<h3 class="heading text-capitalize text-center">Welcome</h3>
-			<h5 class="heading mb-5 text-center">Taxi Cab</h5>
+			<h5 class="heading mb-5 text-center">Cammy Cab</h5>
 			<div class="about-head text-center ">
 				<div class="row about-grids-top mb-5">
 					<div class="col-lg-2 col-sm-4 col-6 about-grid p-0">
@@ -100,7 +100,7 @@
 				<div class="row about-grids-bottom text-left">
 					<div class="col-md-4 mb-md-0 mb-5 about-bottom-grid">
 						<h4 class="mb-4">Lorem ipsum dolor sit amet, In consectetur adipiscing elit. Etiam commodo urna dolor,</h4>
-						<a href="about.html"> More About Us</a>	
+						<a href="/about"> More About Us</a>	
 					</div>
 					<div class="col-md-4 about-bottom-grid">
 						<p>Lorem ipsum dolor sit init amet, consectetur elit adipiscing elit. Etiam commodo urna dolor, eget lacinia est aliquam id. Proin velit libero, vestibul umac orci eu, faucibus consectetur dolor. Cras ullamcorper elit eros, nec bibendum lacus accumsan eu. Donec non </p>
@@ -120,7 +120,7 @@
 	<section class="prices py-5">
 		<div class="container py-lg-5 py-3">
 			<h3 class="heading text-capitalize text-center">Our Pricing</h3>
-			<h5 class="heading mb-5 text-center">Taxi Cab</h5>
+			<h5 class="heading mb-5 text-center">Cammy Cab</h5>
 			<div class="row pricing-grids">
 				<div class="col-lg-3 col-md-6 price-grid">
 					<h3 class="mb-4">Micro Taxi -- <span class="">2$</span></h3>
@@ -170,7 +170,7 @@
 	<section class="testimonials banner-bottom-agile-w3ls py-5">
 		<div class="container py-lg-5 py-3">
 			<h3 class="heading text-capitalize text-center">Reviews</h3>
-			<h5 class="heading mb-5 text-center">Taxi Cab</h5>
+			<h5 class="heading mb-5 text-center">Cammy Cab</h5>
 			<div class="inner-sec-w3layouts-agileits">
 				<div class="owl-carousel owl-theme">
 					<div class="item">
