--- a/templates/master.html
+++ b/templates/master.html
@@ -44,7 +44,7 @@
 		<div class="row">
 			
 			<div class="col-md-4 col-sm-6 log-icons mt-2">
-				<p class="py-2"><i class="fas fa-phone"></i> Call Taxi : 12(00) 123 1234</p>
+				<p class="py-2"><i class="fas fa-phone"></i> Call for Cab Booking : (+91) 8488 886 344 </p>
 			</div>
 			
 			<div class="col-md-4 col-sm-6 logo">
@@ -55,11 +55,11 @@
 			
 			<div class="col-md-4 top-forms mt-md-3 mt-2 mb-md-0 mb-3">
 				<span class="mx-lg-4 mx-md-2  mx-1">
-					<a href="#" data-toggle="modal" aria-pressed="false" data-target="#exampleModal">
+					<a href="/login">
 						<i class="fas fa-lock"></i> Sign In</a>
 				</span>
 				<span>
-					<a href="#" data-toggle="modal" data-target="#exampleModal1" >
+					<a href="/register">
 						<i class="fas fa-user"></i> Register</a>
 				</span>
 			</div>
@@ -77,22 +77,19 @@
 
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
 					<ul class="navbar-nav mx-auto">
-						<li class="nav-item active">
+						<li class="nav-item">
 							<a class="nav-link ml-lg-0" href="/">Home
-								<span class="sr-only">(current)</span>
+								<!--span class="sr-only">(current)</span-->
 							</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="/about">About</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="/services">Services</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="/booking">Booking</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="/contact">Contact</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="/about">About Us</a>
 						</li>
 					</ul>
 				</div>
@@ -117,123 +114,53 @@
 			<div class="col-lg-3 col-sm-6 mb-lg-0 mb-5 footer-grid-agileits-w3ls1 text-left">
 				<h3 class="mb-sm-5 mb-4 mt-sm-0 mt-4">About Company</h3>	
 				<p>Vestibulum vitae libero consectetur, orn areeros id, congue metus. Aliquam erat volutpat. Donec rhoncus risus vitae ullam corper pretium. Duis vitae nisl neque. Aliquam tincidunt, tellus quis hendrerit tincidunt congue metus. </p>
-				<a href="#" class="read">Know More <i class="fas fa-caret-right"></i></a>
+				<a href="/about" class="read">Know More <i class="fas fa-caret-right"></i></a>
 			</div>
 			<div class="col-lg-3 col-sm-6 mb-lg-0 mb-5 footer-grid-agileits-w3ls1 text-left">
 				<h3 class="mb-sm-5 mb-4">Locate Us</h3>	
 				<ul class="w3ls-footer-bottom-list">
-					<li> <span class="fas fa-map-marker"></span> 3481 Jack Street Beverly Jack Hills<span> 90210 Block, USA </span></li>
-					<li> <span class="fas fa-envelope"></span> <a href="mailto:name@example.com"> mail@example.com</a> </li>
-					<li> <span class="fas fa-phone"></span> +112 367 896 2449 </li>
-					<li> <span class="fas fa-fax"></span> +112 367 896 2449 </li>
-					<li> <span class="fas fa-globe"></span> <a href="#"> www.websitename.com</a> </li>
+					<li> <span class="fas fa-map-marker"></span> 402 Shakti-Suman Flats,<span> Gujarat, India </span></li>
+					<li> <span class="fas fa-envelope"></span> <a href="mailto:name@example.com"> info@cammy.com</a> </li>
+					<li> <span class="fas fa-phone"></span> (+91)8488886344 </li>
+					<li> <span class="fas fa-globe"></span> <a href="#"> www.cammy.com</a> </li>
 					<li> <span class="fas fa-clock"></span> Office Time  : 8:00 a.m - 6:00 p.m</li>
 				</ul>
 			</div>
-			<div class="col-lg-3 col-sm-6 mb-sm-0 mb-5 footer-grid-agileits-w3ls text-left">
-				<div class="tech-btm">
-					<h3 class="mb-sm-5 mb-4">Latest Posts</h3>
-					<div class="blog-grids row mb-3">
-						<div class="col-4 pr-0 blog-grid-left">
-							<a href="#">
-								<img src="images/blog1.jpg" class="img-fluid" alt="">
-							</a>
-						</div>
-						<div class="col-8 blog-grid-right">
-
-							<h5>
-								<a href="#">Pellentesque dui, non felis. Maecenas male non felis </a>
-							</h5>
-							<div class="sub-meta">
-								<span>
-									<i class="far fa-clock"></i> 19 Apr, 2018</span>
-							</div>
-						</div>
-						
-					</div>
-					<div class="blog-grids row mb-3">
-						<div class="col-4 pr-0 blog-grid-left">
-							<a href="#">
-								<img src="images/blog2.jpg" class="img-fluid" alt="">
-							</a>
-						</div>
-						<div class="col-8 blog-grid-right">
-
-							<h5>
-								<a href="#">Pellentesque dui, non felis. Maecenas male non felis </a>
-							</h5>
-							<div class="sub-meta">
-								<span>
-									<i class="far fa-clock"></i> 20 Apr, 2018</span>
-							</div>
-						</div>
-						
-					</div>
-					<div class="blog-grids row">
-						<div class="col-4 pr-0 blog-grid-left">
-							<a href="#">
-								<img src="images/blog3.jpg" class="img-fluid" alt="">
-							</a>
-						</div>
-						<div class="col-8 blog-grid-right">
-
-							<h5>
-								<a href="#">Pellentesque dui, non felis. Maecenas male non felis </a>
-							</h5>
-							<div class="sub-meta">
-								<span>
-									<i class="far fa-clock"></i> 21 Apr, 2018</span>
-							</div>
-						</div>
-						
-					</div>
-				</div>
-			</div>
 			<!-- subscribe -->
-			<div class="col-lg-3 col-sm-6 subscribe-main footer-grid-agileits-w3ls text-left">
-				<h3 class="mb-sm-5 mb-4">Newsletter</h3>
-				<div class="subscribe-main text-left">
-					<div class="subscribe-form">
-						<form action="#" method="post" class="subscribe_form">
-							<input class="form-control" type="email" placeholder="Enter Your Email..." required="">
-							<button type="submit" class="btn1 btn-primary submit"><i class="fas fa-paper-plane" aria-hidden="true"></i></button>
-						</form>
-				   </div>
-				</div>
+			<div class="col-lg-3 col-sm-6 mb-lg-0 mb-5 footer-grid-agileits-w3ls1 text-left">
 				<!-- //subscribe -->
 				<div class="footer-social">
-				<div class="copyrighttop">
-				<h3 class="mb-sm-5 mb-4">Stay In Touch</h3>
-					<ul>
-						<li class="mr-1">
-							<a class="facebook" href="#">
-								<i class="fab fa-facebook-f"></i>
-							</a>
-						</li>
-						<li class="mr-1">
-							<a class="facebook" href="#">
-								<i class="fab fa-twitter"></i>
-							</a>
-						</li>
-						<li class="mr-1">
-							<a class="facebook" href="#">
-								<i class="fab fa-google-plus-g"></i>
-							</a>
-						</li>
-						<li class="mr-1">
-							<a class="facebook" href="#">
-								<i class="fab fa-pinterest-p"></i>
-							</a>
-						</li>
-						<li>
-							<a class="facebook" href="#">
-								<i class="fab fa-linkedin-in"></i>
-							</a>
-						</li>
-					</ul>
+					<!--div class="copyrighttop"-->
+						<h3 class="mb-sm-5 mb-4">Stay In Touch</h3>
+						<ul class="w3ls-footer-bottom-list">
+							<li class="mr-1">
+								<a class="facebook" href="#">
+									<i class="fab fa-facebook-f"></i>									
+								</a>
+							<li class="mr-1">
+								<a class="facebook" href="#">
+									<i class="fab fa-twitter"></i>
+								</a>
+							</li>
+							<li class="mr-1">
+								<a class="facebook" href="#">
+									<i class="fab fa-google-plus-g"></i>
+								</a>
+							</li>
+							<li class="mr-1">
+								<a class="facebook" href="#">
+									<i class="fab fa-pinterest-p"></i>
+								</a>
+							</li>
+							<li>
+								<a class="facebook" href="#">
+									<i class="fab fa-linkedin-in"></i>
+								</a>
+							</li>
+						</ul>
 
+					<!--/div-->
 				</div>
-			</div>
 			</div>
 		</div>
 		<!-- copyright -->
@@ -248,92 +175,6 @@
 	</div>
 </footer>
 <!-- //footer -->
-			
-<!-- login and register modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-	<div class="modal-dialog" role="document">
-		<div class="modal-content">
-			<div class="modal-header">
-				<h5 class="modal-title" id="exampleModalLabel">Sign In to your account</h5>
-				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-					<span aria-hidden="true">&times;</span>
-				</button>
-			</div>
-			<div class="modal-body">
-				<form action="#" method="post">
-					<div class="form-group">
-						<label for="recipient-name" class="col-form-label">User Name</label>
-						<input type="text" class="form-control" placeholder="User Name" name="Name" id="recipient-name" required="">
-					</div>
-					<div class="form-group">
-						<label for="password" class="col-form-label">Password</label>
-						<input type="password" class="form-control" placeholder="Password" name="Password" id="password" required="">
-					</div>
-					<div class="row sub-w3l my-3">
-						<div class="col sub-agile">
-							<input type="checkbox" id="brand1" value="">
-							<label for="brand1" class="text-white">
-								<span></span>Remember me?</label>
-						</div>
-						<div class="col forgot-w3l text-right">
-							<a href="#" class="text-white">Forgot Password?</a>
-						</div>
-					</div>
-					<div class="right-w3l">
-						<input type="submit" class="form-control" value="Sign In">
-					</div>
-					<p class="text-center dont-do text-white mt-3">Don't have an account?
-						<a href="#" data-toggle="modal" data-target="#exampleModal1" class="text-white">
-							Register Now</a>
-					</p>
-				</form>
-			</div>
-		</div>
-	</div>
-</div>
-<div class="modal fade" id="exampleModal1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel1" aria-hidden="true">
-	<div class="modal-dialog" role="document">
-		<div class="modal-content">
-			<div class="modal-header">
-				<h5 class="modal-title" id="exampleModalLabel1">Register your account</h5>
-				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-					<span aria-hidden="true">&times;</span>
-				</button>
-			</div>
-			<div class="modal-body">
-				<form action="#" method="post">
-					<div class="form-group">
-						<label for="recipient-name" class="col-form-label">User Name</label>
-						<input type="text" class="form-control" placeholder="User Name" name="Name" id="recipient-rname" required="">
-					</div>
-					<div class="form-group">
-						<label for="recipient-email" class="col-form-label">Email</label>
-						<input type="email" class="form-control" placeholder="Email" name="Email" id="recipient-email" required="">
-					</div>
-					<div class="form-group">
-						<label for="password1" class="col-form-label">Password</label>
-						<input type="password" class="form-control" placeholder="Password" name="Password" id="password1" required="">
-					</div>
-					<div class="form-group">
-						<label for="password2" class="col-form-label">Confirm Password</label>
-						<input type="password" class="form-control" placeholder="Confirm Password" name="Confirm Password" id="password2" required="">
-					</div>
-					<div class="sub-w3l">
-						<div class="sub-agile">
-							<input type="checkbox" id="brand2" value="">
-							<label for="brand2" class="mb-3">
-								<span></span>I Accept to the Terms & Conditions</label>
-						</div>
-					</div>
-					<div class="right-w3l">
-						<input type="submit" class="form-control" value="Register">
-					</div>
-				</form>
-			</div>
-		</div>
-	</div>
-</div>
-<!-- //login and register modal -->
 
 <!-- js-scripts -->		
 
