--- a/templates/about.html
+++ b/templates/about.html
@@ -2,60 +2,100 @@
 
     {% block content %}
     <!-- about -->
-    <section class="about py-5">
-        <div class="container py-lg-5 py-3">
-            <h3 class="heading text-capitalize text-center">Welcome</h3>
-            <h5 class="heading mb-5 text-center">Taxi Cab</h5>
-            <div class="about-head text-center ">
-                <div class="row about-grids-top mb-5">
-                    <div class="col-lg-2 col-sm-4 col-6 about-grid p-0">
-                        <i class="fas fa-money-bill-alt" aria-hidden="true"></i>
-                        <h4>Low Charges</h4>
-                    </div>
-                    <div class="col-lg-2 col-sm-4 col-6 about-grid p-0">
-                        <i class="fa fa-users" aria-hidden="true"></i>
-                        <h4>Safe & Secure</h4>
-                    </div>
-                    <div class="col-lg-2 col-sm-4 col-6 mt-sm-0 mt-5 about-grid p-0">
-                        <i class="fa fa-road" aria-hidden="true"></i>
-                        <h4>Traffic Roads</h4>
-                    </div>
-                    <div class="col-lg-2 col-sm-4 col-6 mt-lg-0 mt-5 about-grid p-0">
-                        <i class="fa fa-taxi" aria-hidden="true"></i>
-                        <h4>Taxi Cabs</h4>
-                    </div>
-                    <div class="col-lg-2 col-sm-4 col-6 mt-lg-0 mt-5 about-grid p-0">
-                        <i class="fa fa-cogs" aria-hidden="true"></i>
-                        <h4>24/7 Service</h4>
-                    </div>
-                    <div class="col-lg-2 col-sm-4 col-6 mt-lg-0 mt-5 about-grid p-0">
-                        <i class="fa fa-smile" aria-hidden="true"></i>
-                        <h4>Customers</h4>
-                    </div>
+    <section class="services py-5">
+        <div class="container py-lg-5">
+            <h1 class="heading text-capitalize text-center">Our Services</h1>
+            <h5 class="heading mb-5 text-center">Cammy Cab</h5>
+            <div class="row service-grids">
+                <div class="col-lg-4">
+                    <h3 class="text-capitalize mb-3">We have a range of vehicles</h3>
+                    <p class="mb-3">Vestibulum et augue eu nibh tincidunt pretium vitae eget purus. Pellentesque necist urna eleifend, semper eros sed, sollicitudin justo. Nam finibus sollicitudin enim, nec blan ditmi laoreet sed. Morbi auctor purus ac ligula aliquetis vestibulum. Quisque vitae sollicitu dinet augue eu pretium vitae.</p>
                 </div>
-                <div class="row about-grids-bottom text-left">
-                    <div class="col-md-4 mb-md-0 mb-5 about-bottom-grid">
-                        <h4 class="mb-4">Lorem ipsum dolor sit amet, In consectetur adipiscing elit. Etiam commodo urna dolor,</h4>
-                        <a href="about.html"> More About Us</a>	
-                    </div>
-                    <div class="col-md-4 about-bottom-grid">
-                        <p>Lorem ipsum dolor sit init amet, consectetur elit adipiscing elit. Etiam commodo urna dolor, eget lacinia est aliquam id. Proin velit libero, vestibul umac orci eu, faucibus consectetur dolor. Cras ullamcorper elit eros, nec bibendum lacus accumsan eu. Donec non </p>
-                    </div>
-                    <div class="col-md-4 about-bottom-grid">
-                        <p>Lorem ipsum dolor sit init amet, consectetur elit adipiscing elit. Etiam commodo urna dolor, eget lacinia est aliquam id. Proin velit libero, vestibul umac orci eu, faucibus consectetur dolor. Cras ullamcorper elit eros, nec bibendum lacus accumsan eu. Donec non </p>
-                    </div>
+                <div class="col-lg-2 col-6">
+                    <img src="images/1.png" alt="" class="img-fluid" />
+                    <img src="images/2.png" alt="" class="img-fluid" />
+                    <img src="images/3.png" alt="" class="img-fluid" />
+                </div>
+                <div class="col-lg-2 col-6">
+                    <img src="images/3.png" alt="" class="img-fluid" />
+                    <img src="images/1.png" alt="" class="img-fluid" />
+                    <img src="images/2.png" alt="" class="img-fluid" />
+                </div>
+                <div class="col-lg-4">
+                    <h4 class="text-capitalize"><i class="fas fa-taxi clr1"></i>Luxury Cars</h4>
+                    <p class="mb-4"> Vestibulum et augue eunibh metus diam.</p>
+                    <h4 class="text-capitalize"><i class="fas fa-bus clr2"></i>Luxury Vans</h4>
+                    <p class="mb-4"> Vestibulum et augue eunibh metus diam.</p>
+                    <h4 class="text-capitalize"><i class="fas fa-car clr3"></i>Luxury Elite</h4>
+                    <p class="mb-4"> Vestibulum et augue eunibh metus diam laoreet.</p>
                 </div>
             </div>
-                    
         </div>
     </section>
     <!-- //about -->
-
+    <!-- Why taxi cab -->
+    <section class="why">
+        <div class="container-fluid p-md-5 p-3">
+            <h3 class="heading text-capitalize text-center">Why Cammy cab</h3>
+            <h5 class="heading mb-5 text-center">Cammy Cab</h5>
+            <div class="row why-grids">
+                <div class="col-lg-3 col-md-4 col-sm-6">
+                    <div class="py-5 px-2 mb-4 grid1 text-center">
+                        <h4 class="mx-auto"><span>1</span></h4>
+                        <p class="mt-5">Top Rated Drivers</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-4 col-sm-6">
+                    <div class="py-5 px-2 mb-4 grid2 text-center">
+                        <h4 class="mx-auto"><span>2</span></h4>
+                        <p class="mt-5">Safety Journey</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-4 col-sm-6">
+                    <div class="py-5 px-2 mb-4 grid3 text-center">
+                        <h4 class="mx-auto"><span>3</span></h4>
+                        <p class="mt-5">Without Peak Pricing</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-4 col-sm-6">
+                    <div class="py-5 px-2 mb-4 grid4 text-center">
+                        <h4 class="mx-auto"><span>4</span></h4>
+                        <p class="mt-5">Fast And Secure</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-4 col-sm-6">
+                    <div class="py-5 px-2 mb-md-0 mb-4 grid5 text-center">
+                        <h4 class="mx-auto"><span>5</span></h4>
+                        <p class="mt-5">Lowest Rates</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-4 col-sm-6">
+                    <div class="py-5 px-2 mb-md-0 mb-4 grid6 text-center">
+                        <h4 class="mx-auto"><span>6</span></h4>
+                        <p class="mt-5">Best Quality Cabs</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-4 col-sm-6">
+                    <div class="py-5 px-2 mb-sm-0 mb-4 grid7 text-center">
+                        <h4 class="mx-auto"><span>7</span></h4>
+                        <p class="mt-5">Online Booking</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-4 col-sm-6">
+                    <div class="py-5 px-2 grid8 text-center">
+                        <h4 class="mx-auto"><span>8</span></h4>
+                        <p class="mt-5">24/7 Cab Service</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- //Why taxi cab -->
     <!-- counter -->
     <div class="services-bottom stats py-5">
         <div class="container py-lg-5 pb-3">
             <h2 class="heading text-capitalize text-center">Our Stats</h2>
-            <h5 class="heading mb-5 text-center">Taxi Cab</h5>
+            <h5 class="heading mb-5 text-center">Cammy Cab</h5>
             <div class="row wthree-agile-counter">
             <div class="col-sm-3 col-6 w3_agile_stats_grid-top">
                 <div class="w3_agile_stats_grid">
@@ -113,22 +153,22 @@
     <!-- Cars slider -->
     <section class="food-Slider py-5">
         <div class="container py-lg-5">
-            <h3 class="heading text-capitalize text-center">Our Taxi Cars</h3>
-            <h5 class="heading mb-5 text-center">Taxi Cab</h5>
+            <h3 class="heading text-capitalize text-center">Our Cabs</h3>
+            <h5 class="heading mb-5 text-center">Cammy Cab</h5>
             <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <div class="row">
                             <div class="col-md-4 col-sm-6 slidering">
-                                <div class="thumbnail"><img src="images/1.png" alt="Image" style="max-width:100%;"></div>
+                                <div class="thumbnail"><img src="{{ url_for('static', filename='images/1.png')}}" alt="Image" style="max-width:100%;"></div>
                                 <h5 class="my-2 text-center text-uppercase">Mini Taxi </h5>
                             </div>
                             <div class="col-md-4 col-sm-6 slidering">
-                                <div class="thumbnail"><img src="images/2.png" alt="Image" style="max-width:100%;"></div>
+                                <div class="thumbnail"><img src="{{ url_for('static', filename='images/2.png')}}" alt="Image" style="max-width:100%;"></div>
                                 <h5 class="my-2 text-center text-uppercase">Prime Taxi </h5>
                             </div>
                             <div class="col-md-4 col-sm-6 slidering">
-                                <div class="thumbnail"><img src="images/3.png" alt="Image" style="max-width:100%;"></div>
+                                <div class="thumbnail"><img src="{{ url_for('static', filename='images/3.png')}}" alt="Image" style="max-width:100%;"></div>
                                 <h5 class="my-2 text-center text-uppercase">Sedan Taxi </h5>
                             </div>
                         </div>
@@ -136,15 +176,15 @@
                     <div class="carousel-item">
                         <div class="row">
                             <div class="col-md-4 col-sm-6 slidering">
-                                <div class="thumbnail"><img src="images/1.png" alt="Image" style="max-width:100%;"></div>
+                                <div class="thumbnail"><img src="{{ url_for('static', filename='images/1.png')}}" alt="Image" style="max-width:100%;"></div>
                                 <h5 class="my-2 text-center text-uppercase">Mini Taxi </h5>
                             </div>
                             <div class="col-md-4 col-sm-6 slidering">
-                                <div class="thumbnail"><img src="images/2.png" alt="Image" style="max-width:100%;"></div>
+                                <div class="thumbnail"><img src="{{ url_for('static', filename='images/2.png')}}" alt="Image" style="max-width:100%;"></div>
                                 <h5 class="my-2 text-center text-uppercase">Prime Taxi </h5>
                             </div>
                             <div class="col-md-4 col-sm-6 slidering">
-                                <div class="thumbnail"><img src="images/3.png" alt="Image" style="max-width:100%;"></div>
+                                <div class="thumbnail"><img src="{{ url_for('static', filename='images/3.png')}}" alt="Image" style="max-width:100%;"></div>
                                 <h5 class="my-2 text-center text-uppercase">Sedan Taxi </h5>
                             </div>
                         </div>
@@ -152,15 +192,15 @@
                     <div class="carousel-item">
                         <div class="row">
                             <div class="col-md-4 col-sm-6 slidering">
-                                <div class="thumbnail"><img src="images/1.png" alt="Image" style="max-width:100%;"></div>
+                                <div class="thumbnail"><img src="{{ url_for('static', filename='images/1.png')}}" alt="Image" style="max-width:100%;"></div>
                                 <h5 class="my-2 text-center text-uppercase">Mini Taxi </h5>
                             </div>
                             <div class="col-md-4 col-sm-6 slidering">
-                                <div class="thumbnail"><img src="images/2.png" alt="Image" style="max-width:100%;"></div>
+                                <div class="thumbnail"><img src="{{ url_for('static', filename='images/2.png')}}" alt="Image" style="max-width:100%;"></div>
                                 <h5 class="my-2 text-center text-uppercase">Prime Taxi </h5>
                             </div>
                             <div class="col-md-4 col-sm-6 slidering">
-                                <div class="thumbnail"><img src="images/3.png" alt="Image" style="max-width:100%;"></div>
+                                <div class="thumbnail"><img src="{{ url_for('static', filename='images/3.png')}}" alt="Image" style="max-width:100%;"></div>
                                 <h5 class="my-2 text-center text-uppercase">Sedan Taxi </h5>
                             </div>
                         </div>
@@ -180,71 +220,13 @@
     <!-- //Cars slider -->
 
     <!-- booking -->
-    <section class="container py-3">
+    <!--section class="container py-3">
         <div class="booking text-center p-sm-5 py-5 px-3">
-            <h3>Book your taxi Cab Now</h3>
+            <h3>Book your Cab Now</h3>
             <p class="my-4">Vestibulum vitae libero consectetur, orn areeros id, congue metus. Aliquam erat volutpat. Donec rhoncus risus vitae ullam corper pretium. Duis vitae nisl neque. Aliquam tincidunt. </p>
-            <a href="booking.html">Book Now</a>
+            <a href="/booking">Book Now</a>
         </div>
-    </section>
+    </section-->
     <!-- booking -->
 
-    <!-- team -->
-    <section class="wthree-row py-5">
-        <div class="container py-md-5 py-3">
-            <h3 class="heading text-capitalize text-center">Our Drivers</h3>
-            <h5 class="heading mb-5 text-center">Taxi Cab</h5>
-            <div class="row text-center">
-                <div class="col-lg-3 col-6 team-grids">
-                    <div class="team-effect">
-                        <img src="images/team1.jpg" alt="img" class="img-fluid">
-                    </div>
-                    <!-- team text -->
-                    <div class="footerv2-w3ls mt-3">
-                        <h4>John Smith</h4>
-                        <p class="my-2">Taxi Driver</p>
-                        <p><i class="fas fa-phone" aria-hidden="true"></i> 12(00) 123 1234</p>
-                    </div>
-                    <!-- //team text -->
-                </div>
-                <div class="col-lg-3 col-6 team-grids">
-                    <div class="team-effect">
-                        <img src="images/team2.jpg" alt="img" class="img-fluid">
-                    </div>
-                    <!-- team text -->
-                    <div class="footerv2-w3ls mt-3">
-                        <h4>Laura Hill</h4>
-                        <p class="my-2">Taxi Driver</p>
-                        <p><i class="fas fa-phone" aria-hidden="true"></i> 12(00) 123 1235</p>
-                    </div>
-                    <!-- //team text -->
-                </div>
-                <div class="col-lg-3 col-6 team-grids mt-lg-0 mt-5">
-                    <div class="team-effect">
-                        <img src="images/team3.jpg" alt="img" class="img-fluid">
-                    </div>
-                    <!-- team text -->
-                    <div class="footerv2-w3ls mt-3">
-                        <h4>Smith Kevin</h4>
-                        <p class="my-2">Taxi Driver</p>
-                        <p><i class="fas fa-phone" aria-hidden="true"></i> 12(00) 123 1236</p>
-                    </div>
-                    <!-- //team text -->
-                </div>
-                <div class="col-lg-3 col-6 team-grids mt-lg-0 mt-5">
-                    <div class="team-effect">
-                        <img src="images/team4.jpg" alt="img" class="img-fluid">
-                    </div>
-                    <!-- team text -->
-                    <div class="footerv2-w3ls mt-3">
-                        <h4>Thomson Doe</h4>
-                        <p class="my-2">Taxi Driver</p>
-                        <p><i class="fas fa-phone" aria-hidden="true"></i> 12(00) 123 1237</p>
-                    </div>
-                    <!-- //team text -->
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- //team -->
     {% endblock %}
