--- a/templates/contact.html
+++ b/templates/contact.html
@@ -5,7 +5,7 @@
     <section class="contact py-5">
         <div class="container py-lg-5">
             <h1 class="heading text-capitalize text-center">Contact Us</h1>
-            <h5 class="heading mb-5 text-center">Taxi Cab</h5>
+            <h5 class="heading mb-5 text-center">Cammy Cab</h5>
             <div class="row agile-contact-form">
                 <div class="col-md-6 contact-form-left map">
                     <div class="w3layouts-contact-form-top">
@@ -39,7 +39,7 @@
                                 </div>
                                 <div class="col-lg-9 col-sm-10 address-right text-left">
                                     <h6>Address</h6>
-                                    <p> 3481 Jack Street Beverly Jack Hills<span> 90210 Block, USA </span>
+                                    <p> 402 Shakti-Suman Flats, <span> Gujarat, India</span>
                                     </p>
                                 </div>
                             </div>
@@ -52,7 +52,7 @@
                                 <div class="col-lg-9 col-sm-10 address-right text-left">
                                     <h6>Email</h6>
                                     <p>Email :
-                                        <a href="mailto:example@email.com"> mail@example.com</a>
+                                        <a href="mailto:example@email.com"> info@cammy.com</a>
                                     </p>
                                 </div>
                             </div>
@@ -64,8 +64,7 @@
                                 </div>
                                 <div class="col-lg-9 col-sm-10 address-right text-left">
                                     <h6>Phone</h6>
-                                    <p>Phone : 112 367 896 2449</p>
-                                    <p>Fax : 112 367 896 2449</p>
+                                    <p>Phone : (+91) 8488 886 344</p>
                                     </p>
                                 </div>
                             </div>
