--- a/templates/booking.html
+++ b/templates/booking.html
@@ -4,11 +4,11 @@
 
     <!-- Booking -->
     <section class="bookingform py-5">
-        <div class="container py-md-5 py-3">
+        <div class="container col-lg-6 py-md-5 py-3">
             <h1 class="heading text-capitalize text-center">Booking form</h1>
             <h5 class="heading mb-5 text-center">Taxi Cab</h5>
-            <div class="row">
-                <div class="col-lg-6 book-appointment p-sm-5 py-5 px-4">
+            <div class="row justify-content-center" role="document">
+                <div class="book-appointment p-sm-5 py-5 px-4">
                     <h2>Personal Details</h2>
                     <div class="book-agileinfo-form">
                         <form action="#" method="post">
