--- a/templates/login.html
+++ b/templates/login.html
@@ -52,10 +52,10 @@
         <div class="container py-md-5 py-3">
             <h1 class="heading text-capitalize text-center">Sign In to your account</h1>
             <h5 class="heading mb-5 text-center">Cammy Cab</h5>
-            <div class="modal-dialog" role="document">
-                <div class="modal-content">
+            <div class="row justify-content-center" role="document">
+                <div class="">
                     <div class="modal-header">
-                        <h5>Please Enter</h5>
+                        <h5 class="">Please Enter Your Credentials</h5>
                     </div>
                     <div class="modal-body">
                         <form action="#" method="post">
