--- a/templates/register.html
+++ b/templates/register.html
@@ -4,8 +4,8 @@
         <div class="container py-md-5 py-3">
             <h1 class="heading text-capitalize text-center">Register your account</h1>
             <h5 class="heading mb-5 text-center">Cammy Cab</h5>
-            <div class="modal-dialog" role="document">
-                <div class="modal-content">
+            <div class="row justify-content-center" role="document">
+                <div class="col-lg-6">
                     <div class="modal-header">
                         <h5>Please Enter</h5>
                     </div>
@@ -30,7 +30,7 @@
                             <div class="sub-w3l">
                                 <div class="sub-agile">
                                     <input type="checkbox" id="brand2" value="">
-                                    <label for="brand2" class="mb-3">
+                                    <label for="brand2" class="mb-3" style="color: blanchedalmond;">
                                         <span></span>I Accept to the Terms & Conditions</label>
                                 </div>
                             </div>
