--- a/templates/register.html
+++ b/templates/register.html
@@ -10,22 +10,30 @@
                         <h5>Please Enter</h5>
                     </div>
                     <div class="modal-body">
-                        <form action="#" method="post">
+                        <form action="/register" method="POST">
                             <div class="form-group">
-                                <label for="recipient-name" class="col-form-label">User Name</label>
-                                <input type="text" class="form-control" placeholder="User Name" name="Name" id="recipient-rname" required="">
+                                <label for="recipient-name" class="col-form-label">First Name</label>
+                                <input type="text" class="form-control" placeholder="First Name" name="fname" id="recipient-fname" required="">
+                            </div>
+                            <div class="form-group">
+                                <label for="recipient-name" class="col-form-label">Last Name</label>
+                                <input type="text" class="form-control" placeholder="Last Name" name="lname" id="recipient-lname" required="">
                             </div>
                             <div class="form-group">
                                 <label for="recipient-email" class="col-form-label">Email</label>
-                                <input type="email" class="form-control" placeholder="Email" name="Email" id="recipient-email" required="">
+                                <input type="email" class="form-control" placeholder="Email" name="email" id="recipient-email" required="">
+                            </div>
+                            <div class="form-group">
+                                <label for="recipient-email" class="col-form-label">Contact</label>
+                                <input type="number" class="form-control" placeholder="Contact" name="contact" id="recipient-contact" required="">
                             </div>
                             <div class="form-group">
                                 <label for="password1" class="col-form-label">Password</label>
-                                <input type="password" class="form-control" placeholder="Password" name="Password" id="password1" required="">
+                                <input type="password" class="form-control" placeholder="Password" name="password" id="password1" required="">
                             </div>
                             <div class="form-group">
                                 <label for="password2" class="col-form-label">Confirm Password</label>
-                                <input type="password" class="form-control" placeholder="Confirm Password" name="Confirm Password" id="password2" required="">
+                                <input type="password" class="form-control" placeholder="Confirm Password" name="cpassword" id="password2" required="">
                             </div>
                             <div class="sub-w3l">
                                 <div class="sub-agile">
