--- a/templates/register.html
+++ b/templates/register.html
@@ -10,7 +10,7 @@
                         <h5>Please Enter</h5>
                     </div>
                     <div class="modal-body">
-                        <form action="/register" method="POST">
+                        <form method="POST">
                             <div class="form-group">
                                 <label for="recipient-name" class="col-form-label">First Name</label>
                                 <input type="text" class="form-control" placeholder="First Name" name="fname" id="recipient-fname" required="">
