--- a/templates/login.html
+++ b/templates/login.html
@@ -58,14 +58,14 @@
                         <h5 class="">Please Enter Your Credentials</h5>
                     </div>
                     <div class="modal-body">
-                        <form action="#" method="post">
+                        <form action="/login" method="POST">
                             <div class="form-group">
-                                <label for="recipient-name" class="col-form-label">User Name</label>
-                                <input type="text" class="form-control" placeholder="User Name" name="Name" id="recipient-name" required="">
+                                <label for="recipient-name" class="col-form-label">Email-Id</label>
+                                <input type="text" class="form-control" placeholder="Email-Id" name="email" id="recipient-name" required="">
                             </div>
                             <div class="form-group">
                                 <label for="password" class="col-form-label">Password</label>
-                                <input type="password" class="form-control" placeholder="Password" name="Password" id="password" required="">
+                                <input type="password" class="form-control" placeholder="Password" name="password" id="password" required="">
                             </div>
                             <div class="row sub-w3l my-3">
                                 <div class="col sub-agile">
