Just slight edit

--- a/templates/login.html
+++ b/templates/login.html
@@ -61,7 +61,7 @@
                         {% with messages = get_flashed_messages() %}
                             {% if messages %}
                                 <div class="notification is-danger text-light">
-                                    {{ messages[0] }}. and try again. <br><br>
+                                    {{ messages[0] }} and try again. <br><br>
                                 </div>
                             {% endif %}
                         {% endwith %}
