--- a/templates/index.html
+++ b/templates/index.html
@@ -166,6 +166,10 @@
 	</section>
 	<!-- //Our prices -->
 
+	{%if data%}
+		<h1>{{data.fname}}</h1>
+	{%endif%}
+
 	<!--/testimonials-->
 	<section class="testimonials banner-bottom-agile-w3ls py-5">
 		<div class="container py-lg-5 py-3">
