--- a/templates/contact.html
+++ b/templates/contact.html
@@ -12,7 +12,7 @@
                     <div class="contact-form-top">
                         <h3>Locate Us</h3>
                     </div>
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3381268.89304075!2d-108.26956901768942!3d34.145820117962906!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4b0d03d337cc6ad9%3A0x9968b72aa2438fa5!2sCanada!5e0!3m2!1sen!2sin!4v1524478277945" allowfullscreen></iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3671.6289354858664!2d72.52095151480111!3d23.03739278494555!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x395e84b4f9889f7f%3A0xf3fe42c9ac64acc0!2sShakti%20Suman%20Complex%2C%20Sandesh%20Press%20Rd%2C%20Vastrapur%2C%20Ahmedabad%2C%20Gujarat%20380015!5e0!3m2!1sen!2sin!4v1641833863334!5m2!1sen!2sin" allowfullscreen></iframe>
                     </div>
                     
                 </div>
