--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,8 @@
 							<div class="banner-info text-center">
 								<span class="fas fa-taxi"></span>
 								<h1>24/7 Cab Service </h1>
-								<h2 class="mb-5"><i class="fas fa-phone"></i> 12(00) 123 1234</h2>
+								<!-- <h2 class="mb-5"><i class="fas fa-phone"></i> (+91) 8488886344</h2> -->
+								<br><br><br>
 								<a href="/booking">Book Now </a>
 							</div>
 						</div>
@@ -99,14 +100,14 @@
 				</div>
 				<div class="row about-grids-bottom text-left">
 					<div class="col-md-4 mb-md-0 mb-5 about-bottom-grid">
-						<h4 class="mb-4">Lorem ipsum dolor sit amet, In consectetur adipiscing elit. Etiam commodo urna dolor,</h4>
+						<h4 class="mb-4">Welcome to Cammy Cab Services. Click on the button below to know more about us</h4>
 						<a href="/about"> More About Us</a>	
 					</div>
 					<div class="col-md-4 about-bottom-grid">
-						<p>Lorem ipsum dolor sit init amet, consectetur elit adipiscing elit. Etiam commodo urna dolor, eget lacinia est aliquam id. Proin velit libero, vestibul umac orci eu, faucibus consectetur dolor. Cras ullamcorper elit eros, nec bibendum lacus accumsan eu. Donec non </p>
+						<p>The most loved part of our service is the <b>Low fares</b> that we offer. When compared with our competitors, we provide cab service at a minimal rates starting from <b>Rs.8/km*</b></p>
 					</div>
 					<div class="col-md-4 about-bottom-grid">
-						<p>Lorem ipsum dolor sit init amet, consectetur elit adipiscing elit. Etiam commodo urna dolor, eget lacinia est aliquam id. Proin velit libero, vestibul umac orci eu, faucibus consectetur dolor. Cras ullamcorper elit eros, nec bibendum lacus accumsan eu. Donec non </p>
+						<p>One other positive point of the Cammy Cab is great customer support and quick resolutions for all queries and complaints. We promise to resolve all the complaints within a short period of 24 hours.</p>
 					</div>
 				</div>
 			</div>
@@ -123,43 +124,47 @@
 			<h5 class="heading mb-5 text-center">Cammy Cab</h5>
 			<div class="row pricing-grids">
 				<div class="col-lg-3 col-md-6 price-grid">
-					<h3 class="mb-4">Micro Taxi -- <span class="">2$</span></h3>
+					<h3 class="mb-4">Micro Taxi -- <span class="">Rs.8/km*</span></h3>
 					<h4 class="my-3">Small fares for short rides</h4>
-					<p> Curabitur eu neque nec ante sagittis dapibus et eu purus. Proin et erat tempus, tempor sapien ac, faucibus nibh.</p>
-					<ul class="d-flex mt-3">
+					<p> Yes!! Comfort and savings are possible together. Book a micro taxi starting at a minimal rate of Rs.8/km</p>
+					<p style="border-top: 3px solid #bbb;"></p>
+					<!-- <ul class="d-flex mt-3">
 						<li class="mr-3">2 <i class="fas fa-male" aria-hidden="true"></i></li>
 						<li class="mr-3">1 <i class="fas fa-suitcase" aria-hidden="true"></i></li>
-					</ul>
+					</ul> -->
 				</div>
 				<div class="col-lg-3 col-md-6 mt-md-0 mt-5 price-grid">
-					<h3 class="mb-4">Mini Taxi -- <span class="">3$</span></h3>
-					<h4 class="my-3">Small fares for short rides</h4>
-					<p> Curabitur eu neque nec ante sagittis dapibus et eu purus. Proin et erat tempus, tempor sapien ac, faucibus nibh.</p>
-					<ul class="d-flex mt-3">
+					<h3 class="mb-4">Mini Taxi -- <span class="">Rs.11/km*</span></h3>
+					<h4 class="my-3">Small fares for medium rides. Too</h4>
+					<p> Try our mini taxi and enjoy your medium journey without putting a burden on your wallet. Fare starts from Rs.11/km</p>
+					<p style="border-top: 3px solid #bbb;"></p>
+					<!-- <ul class="d-flex mt-3">
 						<li class="mr-3">2 <i class="fas fa-male" aria-hidden="true"></i></li>
 						<li class="mr-3">2 <i class="fas fa-suitcase" aria-hidden="true"></i></li>
 						<li class="mr-3">1 <i class="fas fa-wifi" aria-hidden="true"></i></li>
-					</ul>
+					</ul> -->
 				</div>
 				<div class="col-lg-3 col-md-6 mt-lg-0 mt-5 price-grid">
-					<h3 class="mb-4">Prime Taxi -- <span class="">4$</span></h3>
-					<h4 class="my-3">Small fares for short rides</h4>
-					<p> Curabitur eu neque nec ante sagittis dapibus et eu purus. Proin et erat tempus, tempor sapien ac, faucibus nibh.</p>
-					<ul class="d-flex mt-3">
+					<h3 class="mb-4">Prime Taxi -- <span class="">Rs.20/km*</span></h3>
+					<h4 class="my-3">Spend more. Get more</h4>
+					<p> Book a Prime Taxi and feel like its your own car. Get additional advantages like a complimentary drink and much more while you ride.</p>
+					<p style="border-top: 3px solid #bbb;"></p>
+					<!-- <ul class="d-flex mt-3">
 						<li class="mr-3">3 <i class="fas fa-male" aria-hidden="true"></i></li>
 						<li class="mr-3">2 <i class="fas fa-suitcase" aria-hidden="true"></i></li>
 						<li class="mr-3">1 <i class="fas fa-wifi" aria-hidden="true"></i></li>
-					</ul>
+					</ul> -->
 				</div>
 				<div class="col-lg-3 col-md-6 mt-lg-0 mt-5 price-grid">
-					<h3 class="mb-4">Sedan Taxi -- <span class="">5$</span></h3>
-					<h4 class="my-3">Small fares for short rides</h4>
-					<p> Curabitur eu neque nec ante sagittis dapibus et eu purus. Proin et erat tempus, tempor sapien ac, faucibus nibh.</p>
-					<ul class="d-flex mt-3">
+					<h3 class="mb-4">Sedan Taxi -- <span class="">Rs.30/km*</span></h3>
+					<h4 class="my-3">The title suggests itself</h4>
+					<p> At very affordable rates, reach your destination in  premium cars from brands like Mercedes and Audi.</p>
+					<p style="border-top: 3px solid #bbb;"></p>
+					<!-- <ul class="d-flex mt-3">
 						<li class="mr-3">4 <i class="fas fa-male" aria-hidden="true"></i></li>
 						<li class="mr-3">3 <i class="fas fa-suitcase" aria-hidden="true"></i></li>
 						<li class="mr-3">1 <i class="fas fa-wifi" aria-hidden="true"></i></li>
-					</ul>
+					</ul> -->
 				</div>
 			</div>
 		</div>
@@ -176,14 +181,14 @@
 					<div class="item">
 						<div class="feedback-info">
 							<div class="feedback-top p-4">
-								<p> Sed semper leo metus, a lacinia eros semper at. Etiam sodales orci sit amet vehicula pellentesque. </p>
+								<p> I love using Cammy to get rides to places I need to go they're always fairly priced they're always nice cars and the drivers are always very friendly to me. I Highly recommend your work to anyone looking to use a ride service to get to where they need to go. </p>
 							</div>
 							<div class="feedback-grids">
 								<div class="feedback-img">
 									<img src="images/team1.jpg" class="img-fluid" alt="" />
 								</div>
 								<div class="feedback-img-info">
-									<h5>Mary Jane</h5>
+									<h5>Saumya Shah</h5>
 									<p>Customer</p>
 								</div>
 								<div class="clearfix"> </div>
@@ -193,14 +198,14 @@
 					<div class="item">
 						<div class="feedback-info">
 							<div class="feedback-top p-4">
-								<p> Sed semper leo metus, a lacinia eros semper at. Etiam sodales orci sit amet vehicula pellentesque. </p>
+								<p> Excellent. Driver is very nice and friendly and make sure that your drive home is a calm and relaxing one. Also very knowledgeable of the roadways. </p>
 							</div>
 							<div class="feedback-grids">
 								<div class="feedback-img">
 									<img src="images/team3.jpg" class="img-fluid" alt="" />
 								</div>
 								<div class="feedback-img-info">
-									<h5>Peter Guptill</h5>
+									<h5>Kishan Trivedi</h5>
 									<p>Customer</p>
 								</div>
 								<div class="clearfix"> </div>
@@ -210,14 +215,14 @@
 					<div class="item">
 						<div class="feedback-info">
 							<div class="feedback-top p-4">
-								<p> Sed semper leo metus, a lacinia eros semper at. Etiam sodales orci sit amet vehicula pellentesque. </p>
+								<p> Had to have a ride at 4am. Booked days ahead. Was able to book, got confirmation with driver's name, got texts, was told how far driver was out from me, car type and license plate. Driver showed early and I was at airport before 4am! USE THIS APP if you want reliably.</p>
 							</div>
 							<div class="feedback-grids">
 								<div class="feedback-img">
 									<img src="images/team1.jpg" class="img-fluid" alt="" />
 								</div>
 								<div class="feedback-img-info">
-									<h5>Steven Wilson</h5>
+									<h5>Nancy Joshi</h5>
 									<p>Customer</p>
 								</div>
 								<div class="clearfix"> </div>
@@ -227,14 +232,14 @@
 					<div class="item">
 						<div class="feedback-info">
 							<div class="feedback-top p-4">
-								<p> Sed semper leo metus, a lacinia eros semper at. Etiam sodales orci sit amet vehicula pellentesque. </p>
+								<p> For me they're always on time. I been using Cammy Cabs since 2018 and no regrets. Safe 100% and very cordial., maybe some people disagree with me but I'm just sharing my experiences. I recommend it with my eyes close. </p>
 							</div>
 							<div class="feedback-grids">
 								<div class="feedback-img">
 									<img src="images/team3.jpg" class="img-fluid" alt="" />
 								</div>
 								<div class="feedback-img-info">
-									<h5>Mary Jane</h5>
+									<h5>Megha Bhatt</h5>
 									<p>Customer</p>
 								</div>
 								<div class="clearfix"> </div>
@@ -244,14 +249,14 @@
 					<div class="item">
 						<div class="feedback-info">
 							<div class="feedback-top p-4">
-								<p> Sed semper leo metus, a lacinia eros semper at. Etiam sodales orci sit amet vehicula pellentesque. </p>
+								<p> A truly great app. You can get a ride at anytime, and it shows you what vehicle to watch for and gives the license plate number. You can also track your incoming Uber in real-time so you can wait inside until it is about to arrive. I love this app and the service that Cammy provides.</p>
 							</div>
 							<div class="feedback-grids">
 								<div class="feedback-img">
 									<img src="images/team1.jpg" class="img-fluid" alt="" />
 								</div>
 								<div class="feedback-img-info">
-									<h5>Peter Guptill</h5>
+									<h5>Shivam Sheth</h5>
 									<p>Customer</p>
 								</div>
 								<div class="clearfix"> </div>
@@ -261,14 +266,14 @@
 					<div class="item">
 						<div class="feedback-info">
 							<div class="feedback-top p-4 p-4">
-								<p> Sed semper leo metus, a lacinia eros semper at. Etiam sodales orci sit amet vehicula pellentesque. </p>
+								<p> When I went to Mumbai this month for my nephew's wedding, I #Cammied it all over. Fast service and nice drivers. My app told me how many minutes until arrival, the color of the car, the name of the driver and his excellent driving experience.</p>
 							</div>
 							<div class="feedback-grids">
 								<div class="feedback-img">
 									<img src="images/team3.jpg" class="img-fluid" alt="" />
 								</div>
 								<div class="feedback-img-info">
-									<h5>Steven Wilson</h5>
+									<h5>Fenil Mehta</h5>
 									<p>Customer</p>
 								</div>
 								<div class="clearfix"> </div>
