--- a/templates/master.html
+++ b/templates/master.html
@@ -43,35 +43,41 @@
 	<div class="top-bar_sub_w3layouts container-fluid">
 		<div class="row">
 			
-			<div class="col-md-4 col-sm-6 log-icons mt-2">
-				<p class="py-2"><i class="fas fa-phone"></i> Call for Cab Booking : (+91) 8488 886 344 </p>
+			<div class="col-lg-4 col-md-4 col-sm-6 log-icons mt-2 text-left">
+				<p class="py-2"><i class="fas fa-phone"></i><b> Call for Support : (+91) 8488 886 344 </p></b>
 			</div>
 			
-			<div class="col-md-4 col-sm-6 logo">
+			<div class="col-lg-4 col-md-4 col-sm-6 logo">
 				<a class="navbar-brand" href="/">
 					<i class="fas fa-taxi"></i> Cammy Cab</a>
 			</div>
-			<div class="col-md-4 top-forms mt-md-3 mt-2 mb-md-0 mb-3">
-				{% if not data %}
+			
+				{% if current_user.is_authenticated %}
+				<div class="col-lg-4 col-md-4 top-forms mt-md-3 text-center">
+					<span class="nav-item dropdown">
+						<a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
+							aria-expanded="false"> <!-- dropdown-toggle -->
+							<i class="fa fa-lg fa-user"></i>  &nbsp
+							<b>Welcome, {{current_user.fname}}</b>&nbsp &nbsp
+							<i class="fa fa-angle-down" style="color: black;" aria-hidden="true"></i>
+						</a>
+						<span class="dropdown-menu" aria-labelledby="navbarDropdown">
+							<a class="dropdown-item text-left" href="/editprofile">
+								<i class="fa fa-cog"></i> &nbsp 
+								<b> Edit Profile</a></b>
+							<a class="dropdown-item text-left" href="/logout">
+								<i class="fa fa-sign-out-alt"></i> &nbsp &nbsp
+								<b> Logout</a></b>
+						</span>
+					</span>
+				{% else %}
+				<div class="col-lg-4 col-md-4 top-forms mt-md-3">
 					<span class="mx-lg-4 mx-md-2  mx-1">
 						<a href="/login">
 							<i class="fas fa-lock"></i> Sign In</a>
-					</span>
-					<span class="mx-lg-4 mx-md-2  mx-1">
+					</span><span class="mx-lg-4 mx-md-2  mx-1">
 						<a href="/register">
 							<i class="fas fa-user"></i> Register</a>
-					</span>
-				{% endif %}
-				{% if data %}
-					<span class="mx-lg-4 mx-md-2 mx-1 nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
-							aria-expanded="false">
-							Welcome {{data.fname}}
-						</a>
-						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-							<a class="dropdown-item text-center" href="/editprofile">Edit Profile</a>
-							<a class="dropdown-item text-center" href="/logout">Logout</a>
-						</div>
 					</span>
 				{% endif %}
 			</div>
@@ -125,7 +131,7 @@
 		<div class="row">
 			<div class="col-lg-3 col-sm-6 mb-lg-0 mb-5 footer-grid-agileits-w3ls1 text-left">
 				<h3 class="mb-sm-5 mb-4 mt-sm-0 mt-4">About Company</h3>	
-				<p>Vestibulum vitae libero consectetur, orn areeros id, congue metus. Aliquam erat volutpat. Donec rhoncus risus vitae ullam corper pretium. Duis vitae nisl neque. Aliquam tincidunt, tellus quis hendrerit tincidunt congue metus. </p>
+				<p>The Cammy Cab offers the safest and easiest way to ride, with multiple travel options and well-protected rides. With more than 3,00,000 vehicles in 100+ cities including Bangalore, Chennai, Delhi, Mumbai, Hyderabad, Kolkata, and Pune, Cammy is the most popular ride hailing service in India.</p>
 				<a href="/about" class="read">Know More <i class="fas fa-caret-right"></i></a>
 			</div>
 			<div class="col-lg-3 col-sm-6 mb-lg-0 mb-5 footer-grid-agileits-w3ls1 text-left">
@@ -191,8 +197,11 @@
 <!-- js-scripts -->		
 
 	<!-- js -->
-	<script type="text/javascript" src="{{ url_for('static', filename='js/jquery-2.1.4.min.js') }}"></script>
-	<script type="text/javascript" src="{{ url_for('static', filename='js/bootstrap.js') }}"></script> <!-- Necessary-JavaScript-File-For-Bootstrap --> 
+	<!-- <script type="text/javascript" src="{{ url_for('static', filename='js/jquery-2.1.4.min.js') }}"></script>
+	<script type="text/javascript" src="{{ url_for('static', filename='js/bootstrap.js') }}"></script>  -->
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 	<!-- //js -->
 	
 	<!-- carousel -->
