--- a/templates/login.html
+++ b/templates/login.html
@@ -29,19 +29,22 @@
                             </div>
                             <div class="row sub-w3l my-3">
                                 <div class="col sub-agile">
-                                    <input type="checkbox" id="brand1" value="">
+                                    <a href="#" style="color: white;">Forgot Password?</a>
+                                </div>
+                                <!-- <div class="col sub-agile">
+                                    <input type="checkbox" name="remember" id="brand1" value="True">
                                     <label for="brand1" class="text-white">
                                         <span></span>Remember me?</label>
                                 </div>
                                 <div class="col forgot-w3l text-right">
                                     <a href="#" class="text-white">Forgot Password?</a>
-                                </div>
-                            </div>
+                                </div> -->
+                            </div> 
                             <div class="right-w3l">
                                 <input type="submit" class="form-control" value="Sign In">
                             </div>
                             <p class="text-center dont-do text-white mt-3">Don't have an account?
-                                <a href="#" data-toggle="modal" data-target="#exampleModal1" class="text-white">
+                                <a href="/register" style="color: white;">
                                     Register Now</a>
                             </p>
                         </form>
